Fix CURLWEB119 Image carousel styling on mobile

--- a/curling-main/sass/modules/blocks/_block-image-carousel.scss
+++ b/curling-main/sass/modules/blocks/_block-image-carousel.scss
@@ -206,6 +206,14 @@
   display: none;
   min-width: 0;
   height: 100%;
+
+  .slick-track {
+    height: auto;
+
+    @include responsive-min($responsive-tablet) {
+      height: 568px;
+    }
+  }
 }
 
 .image-carousel-rtl .image-carousel-slide {
